--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="head " style="background-image: url(./img/image-blur.jpg);height: 800px; background-position: center top;color: rgb(139, 0, 253);background-size:cover;width: auto;">
      
     <div class="sign-wrap-4 position-absolute text-center container-fluid ">
-        <div   class="sign_word "><h1 style="font-size: 100px;">N<span></span>i<span></span>n<span></span>o <span>P</span><span>l</span><span>u</span><span>s</span></h1></div>
+      <div   class="sign_word "><h1 style="font-size: 6em;">N<span></span>i<span></span>n<span></span>o <span>P</span><span>l</span><span>u</span><span>s</span></h1></div>
         <div ><button class="btn1"><a href="https://discord.ninoteam.fun/">Играть</a></button></div>
     </div>
    
