--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/style.css">
 
 
@@ -18,7 +18,7 @@
 
 <body>
   <!-- header -->
-  <section class="head "
+  <section class="head"
     style="background-image: url(./assets/img/image-blur.jpg);height: 800px; background-position: center top;color: rgb(139, 0, 253);background-size:cover;width: auto;">
 
     <div class="sign-wrap-4 position-absolute text-center container-fluid ">
@@ -29,8 +29,9 @@
       </div>
       <div><button class="btn1"><a href="https://discord.ninoteam.fun/">Играть</a></button></div>
     </div>
-
+    <!-- end header -->
   </section>
+  <!-- content -->
   <section>
     <div class="content">
       <div class="ss-content">
@@ -68,35 +69,46 @@
       </div>
     </div>
   </section>
+  <!-- end content -->
 
+  <!-- chavo -->
   <div class="chavo">
     <h1 style="color: #fff; text-align: center;">Часто задаваемые вопросы</h1>
     <div class="content-1">
-      <div class="item1"><span class="wa">&#128241;</span><span class="sa">Могу ли я играть с телефона?</span><br>
+      <div class="item"><span class="wa">&#128241;</span><span class="sa">Могу ли я играть с телефона?</span><br>
         <p>Нет, сервер доступен только на Java Edition.</p>
       </div>
-      <div class="item2"><span class="wa">&#128268;</span><span class="sa">Какой IP и версия?</span><br>
+      <div class="item"><span class="wa">&#128268;</span><span class="sa">Какой IP и версия?</span><br>
         <p>IP: 151.80.47.150:25647<br>Версия: Java Edition 1.17.1</p>
       </div>
-      <div class="item3"><span class="wa">&#128161;</span><span class="sa">Лицензия нужна?</span><br>
+      <div class="item"><span class="wa">&#128161;</span><span class="sa">Лицензия нужна?</span><br>
         <p>Да, приобрести вы её можете <a id="ss" href="https://www.minecraft.net/ru-ru">здесь</a>.</p>
       </div>
-      <div class="item4"><span class="wa">&#128220;</span><span class="sa">Где можно прочитать правила
+      <div class="item"><span class="wa">&#128220;</span><span class="sa">Где можно прочитать правила
           сервера?</span><br>
         <p>Правила находятся на <a id="ss" href=" https://wiki.ninoteam.fun/">данной странице</a>.</p>
       </div>
-      <div class="item5"><span class="wa">&#128348;</span><span class="sa">Сколько будет идти сезон?</span><br>
+      <div class="item"><span class="wa">&#128348;</span><span class="sa">Сколько будет идти сезон?</span><br>
         <p>Сезон будет длиться до выхода новой версии — 1.18.</p>
       </div>
-      <div class="item6"><span class="wa">&#129488;</span><span class="sa">Есть ещё вопросы?</span><br>
+      <div class="item"><span class="wa">&#129488;</span><span class="sa">Есть ещё вопросы?</span><br>
         <p>Заходите в <a id="ss" href=" https://wiki.ninoteam.fun/#">вики сервера</a>, там много полезного!</p>
       </div>
     </div>
   </div>
 
+  <!-- end chavo -->
 
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer_content">
+      <div class="footer_cor"><img src="./assets/img/server-icon_nino.png" alt=""> <p>Права проекта под защитой. ©️ NinoPlus • 2021-2022.</p></div>
+      <div class="footer_icon"><p>Наши контакты:</p><a href="https://discord.ninoteam.fun/"><i class="fa-brands fa-discord"></i></a> <i class="fa-brands fa-vk"></i> <i class="fa-brands fa-telegram"></i>
+      </div>
+    </div>
+  </footer>
+  <!-- end footer -->
 
-  <!-- header -->
 
 
   <script
