--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>Нет, сервер доступен только на Java Edition.</p>
       </div>
       <div class="item"><span class="wa">&#128268;</span><span class="sa">Какой IP и версия?</span><br>
-        <p>IP: 151.80.47.150:25647<br>Версия: Java Edition 1.17.1</p>
+        <p>IP: 151.80.47.150:25647<br>Версия: Java Edition 1.19</p>
       </div>
       <div class="item"><span class="wa">&#128161;</span><span class="sa">Лицензия нужна?</span><br>
         <p>Да, приобрести вы её можете <a id="ss" href="https://www.minecraft.net/ru-ru">здесь</a>.</p>
@@ -89,7 +89,7 @@
         <p>Правила находятся на <a id="ss" href=" https://wiki.ninoteam.fun/">данной странице</a>.</p>
       </div>
       <div class="item"><span class="wa">&#128348;</span><span class="sa">Сколько будет идти сезон?</span><br>
-        <p>Сезон будет длиться до выхода новой версии — 1.18.</p>
+        <p>Сезон будет длиться до выхода новой версии — 1.20</p>
       </div>
       <div class="item"><span class="wa">&#129488;</span><span class="sa">Есть ещё вопросы?</span><br>
         <p>Заходите в <a id="ss" href=" https://wiki.ninoteam.fun/#">вики сервера</a>, там много полезного!</p>
